2006-02-14  Alex Roitman  <shura@gramps-project.org>
	* src/ReportUtils.py (buried_str): Change the logic to be the same
	as in born_str: first test for modified date, then full date, then
	partial.
	* src/docgen/OpenSpreadSheet.py
	(OpenSpreadSheet._write_meta_file): Properly reference creator string.
	* src/plugins/EventCmp.py (DisplayChart.on_write_table): Set
	document creator; write localized event names.
	(DisplayChart.draw_clist_display): Display localized event names.
	* src/plugins/ChangeTypes.py: Convert event names to English for
	storage and comparison.

2006-02-13  Don Allingham  <don@gramps-project.org>
	* src/EditPerson.py: don't double add a place

2006-02-13  Alex Roitman  <shura@gramps-project.org>
	* src/ReportUtils.py (buried_partial_date_no_place): Typo.
	* src/ArgHandler.py (ArgHandler.cl_export): Do not strip path from
	the media oject references.

2006-02-13  Stefan Bjork  <skalman@acc.umu.se>
	* src/po/sv.po: Minor update.

2006-02-12  Don Allingham  <don@gramps-project.org>
	* src/EventEdit.py: don't report the false "new event added" message
	* src/EditPerson.py: display LDS temple correctly
	* src/plugins/NavWebpage.py: print nickname

2006-02-12  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
	* src/po/Makefile.am (.po.mo): Allow for parallel building.

2006-02-12  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ReadPkg.py (impData): Use persistent directory for
	unpacking the tarball: we need images to stay there.

	* src/AddrEdit.py: Make preformatetd note appear without wrapping.
	* src/EditPerson.py: No wrapping for preformatted notes.
	* src/EditPlace.py: No wrapping for preformatted notes.
	* src/EditSource.py: No wrapping for preformatted notes.
	* src/EventEdit.py: No wrapping for preformatted notes.
	* src/ImageSelect.py: No wrapping for preformatted notes.
	* src/NameEdit.py: No wrapping for preformatted notes.
	* src/Marriage.py: No wrapping for preformatted notes.
